changed theme and some placeholder text in home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,5 +6,8 @@ layout: archive
 
 <h3 class="archive__subtitle">Welcome to my personal page!</h3>
 
+<p>My name is Linus Aarnio and I am a Computer science and engineering student at Linköping University. 
+    Soon you will be able to find more info about me and my projects on this page...
+</p>
 
-{% include paginator.html %}
+
